--- a/static/styles.css
+++ b/static/styles.css
@@ -227,7 +227,7 @@ header.page-header { position: relative; z-index: 1; padding: 80px 40px; backgro
 
 @media (max-width: 600px) { header.page-header { padding: 40px; } }
 
-header.page-header::after { content: ''; position: absolute; z-index: 0; left: 0; bottom: -20vw; width: 100%; height: 20vw; background-color: #211e3c; -webkit-clip-path: polygon(0 0, 100% 0, 0 100%, 0 0); -moz-clip-path: polygon(0 0, 100% 0, 0 100%, 0 0); -ms-clip-path: polygon(0 0, 100% 0, 0 100%, 0 0); -o-clip-path: polygon(0 0, 100% 0, 0 100%, 0 0); clip-path: polygon(0 0, 100% 0, 0 100%, 0 0); }
+header.page-header::after { content: ''; position: absolute; z-index: -1; left: 0; bottom: -20vw; width: 100%; height: 20vw; background-color: #211e3c; -webkit-clip-path: polygon(0 0, 100% 0, 0 100%, 0 0); -moz-clip-path: polygon(0 0, 100% 0, 0 100%, 0 0); -ms-clip-path: polygon(0 0, 100% 0, 0 100%, 0 0); -o-clip-path: polygon(0 0, 100% 0, 0 100%, 0 0); clip-path: polygon(0 0, 100% 0, 0 100%, 0 0); }
 
 @media (max-width: 850px) { header.page-header nav { display: -webkit-box; display: -webkit- flex; display: -moz-box; display: -ms-flexbox; display: -ms- flex; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; -o-align-items: center; align-items: center; } }
 
